--- a/MVCTemplate/Views/Shared/_Layout.cshtml
+++ b/MVCTemplate/Views/Shared/_Layout.cshtml
@@ -4,6 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - MVCTemplate</title>
+    <link rel="stylesheet" href="~/css/site.css" />
+    <script type="text/javascript" src="~/js/site.js"></script>
 </head>
 <body>
     <nav>
